--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 /********** Template CSS **********/
 :root {
     --primary:  #32bcc3;
@@ -31,6 +33,23 @@
     right: 45px;
     bottom: 45px;
     z-index: 99;
+}
+
+
+
+
+/***Navabar***/
+.logo{
+    
+        height: 74px;
+        width: 112px;
+        margin-left: 30px;
+
+}
+
+
+.nav{
+    height: 75px;
 }
 
 /***Section***/
